samples/_failures_safe/1761195277_1b5d31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d0f0f65.c: In function ‘main’:
./samples/SAFE/__tmp_4d0f0f65.c:160:25: error: missing terminating " character
  160 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_4d0f0f65.c:160:9: error: expected expression at end of input
  160 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_4d0f0f65.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d0f0f65.c:160:9: error: expected declaration or statement at end of input
